--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="socials--list">
                 <a href="https://www.linkedin.com/in/adina-maria-gavrila/" target="_blank">Linkedin</a>
                 <a href="https://github.com/MartinA01Maria" target="_blank">Github</a>
-                <a href="./assets/Resume Adina Maria Gavrila(Martin).pdf" target="_blank">Download Resume</a>
+                <a href="./assets/CV_Adina_Maria_Gavrila.pdf" target="_blank">Download Resume</a>
             </div>
         </section>
 
