--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div>
                 <h1 id="user-name">Adina Maria Gavrila (Martin)</h1>
                 <p id="bio">Software engineer</p>
-                <p id="email">martin.adina92@gmail.com</p>
-                <p id="Mobile-Phone"></p>+40756400376</p>
+                <p id="email">🖂 martin.adina92@gmail.com</p>
+                <p id="Mobile-Phone"></p>✆ +40756400376</p>
             </div>  
         </section>
 
@@ -24,7 +24,7 @@
         
             <div id="socials--list">
                 <a href="https://www.linkedin.com/in/adina-maria-gavrila/" target="_blank">Linkedin</a>
-                <a href="https://github.com/MartinA01Maria" target="_blank">Github</a>
+                <a href="https://github.com/MartinA01Maria" target="_blank">GitHub</a>
                 <a href="./assets/CV_Adina_Maria_Gavrila.pdf" target="_blank">Download Resume</a>
             </div>
         </section>
@@ -37,6 +37,26 @@
                 <li>AUTOSAR Training (Continental, 19-28 April 2021)</li>
                 <li>Virtual Ownership Workshop (Continental, 8-9 July 2021)</li>
                 <li>Training safety critical embedded system (Method Park, 16 -18 Aug 2021)</li>
+                <li>ISTQB® Foundation Level - ID: 22-CTFL-209668-14 (ISTQB® - International Software Testing Qualifications Board, June 2022)</li>   
+                <li>ISTQB® Certified Tester - Advanced Level - Test Analyst - ID: 24-CTAL-TA-254430-12
+                    (ISTQB® - International Software Testing Qualifications Board, November 2024)</li>
+                <li>Postman: The Complete Guide - REST API Testing (Udemy, October 2024, 
+                    <a href="https://udemy-certificate.s3.amazonaws.com/pdf/UC-7d8e821f-8214-4b34-b05d-9fbdbc9d72f9.pdf" target="_blank">
+                        https://udemy-certificate.s3.amazonaws.com/pdf/UC-7d8e821f-8214-4b34-b05d-9fbdbc9d72f9.pdf</a>)</li>
+                <li>Cypress -Modern Automation Testing from Scratch + Frameworks (Udemy, November 2024, 
+                    <a href="https://www.udemy.com/certificate/UC-ffe12691-c8f9-40cf-84c4-c2bc52652103/" target="_blank">
+                        https://www.udemy.com/certificate/UC-ffe12691-c8f9-40cf-84c4-c2bc52652103/</a>)</li>
+                <li>Selenium Webdriver with PYTHON from Scratch + Frameworks (Udemy, January 2025, 
+                    <a href="https://www.udemy.com/certificate/UC-a60c45eb-d637-4bc1-83b5-cb5552ccbc4d/" target="_blank">
+                        https://www.udemy.com/certificate/UC-a60c45eb-d637-4bc1-83b5-cb5552ccbc4d/</a>)</li>
+                <li>Playwright test automation course with TypeScript. Best practices, API testing, Page
+                    Objects, Advanced features (Udemy, March 2025,
+                    <a href="https://www.udemy.com/certificate/UC-c95b2069-8de8-4563-b374-94eca4d1eabf/" target="_blank">
+                        https://www.udemy.com/certificate/UC-c95b2069-8de8-4563-b374-94eca4d1eabf/</a>)</li>
+                <li>JMETER on Live Apps - Performance Testing (Udemy, June 2025, 
+                    <a href="https://www.udemy.com/certificate/UC-db735a8a-27e4-4594-b94b-ddcd053c1949/" target="_blank">https://www.udemy.com/certificate/UC-db735a8a-27e4-4594-b94b-ddcd053c1949/</a>)</li>
+                <li>Python/PostgreSQL (Udemy, August 2025, 
+                     <a href="https://www.udemy.com/certificate/UC-1ce71a0f-d5e9-499e-b4e9-d4c1aed4ab08/" target="_blank">https://www.udemy.com/certificate/UC-1ce71a0f-d5e9-499e-b4e9-d4c1aed4ab08/</a>)</li>                 
             </ul>
         </section>
 
