CV - reduced list of activities

--- a/index.html
+++ b/index.html
@@ -52,47 +52,15 @@
                 <p>November 2022 - present</p>
                 <p><strong>[Challenge]</strong> Working for Interior Sound projects - Fisker AVAS Onebox, Seat A2B Innensound and Audi SASGen29</p>
                 <strong>[Main tasks]</strong>
-                <ul>
-                    <li>Build reliable, reusable and maintainable automated regression suites and
-                        test harnesses.</li>
-                    <li>Design and develop automation solutions that meet the organization standards.</li> 
-                    <li>Capture quality assurance data and metrics to provide insights and conclusions</li>
-                    <li>Acts as a test lead, planning the work of other testing stuff and assigning
-                        tasks to meet project deadlines</li>
-                    <li>Ensure best practices are followed and ensure that development and testing activities stay on schedule.</li>
-                    <li>Participate in internal cross-team meetings, project scoping and functional
-review for the assigned projects in Agile environments.</li>
-                </ul>
             </div>
 
             <div class="line-break"></div>
 
             <div class="card--work-history">
-                <strong>🚧 Senior Software Engineer | ProIT Sibiu</strong>
+                <strong>🚧 Senior Software Test Engineer | ProIT Sibiu</strong>
                 <p>March 2022 - November 2022</p>
                 <p>Worked on 2 Audi projects - DTC (Dynamic Torque Control) and DC(Dumper Control)
                 </p>
-                <ul>
-                    <li>Review requirements and documentation to ensure that the individual
-                        requirements (functional and non-functional requirements) of the SWRS
-                        documents (module, block and software component) are testable and that
-                        the requirements do not contain any errors or ambiguities.</li>
-                    <li> Review test specification (check also whether the test implementation
-                        adheres to guidelines and ensure continuous and advancing quality).</li>
-                    <li>Performed interface consistency check to ensure that modules of a SWC component are correctly integrated./</li>
-                    <li>Performed Resource Usage Test to ensure the fulfillment of resourcerequirements.</li> 
-                    <li>Safety test obj files - testing on the target simulation board (ensure the
-                    correct behavior of the system under test with respect to the processor
-                    architecture e.g. size of scalar data types, error handling).</li> 
-                    <li>Performed Back-to-back comparison (B2B) test between the model and
-                    the object on the target used to ensure that the behaviour of the model
-                    with regard to the test objectives is equivalent to the automatically
-                    generated objects on the target (MiL - PiL comparison) within a specific
-                    tolerance.</li> 
-                    <li>Performed parameter Validity Check (check that the dataset contains only
-                    desired parameter changes).</li> 
-                    
-                </ul>
             </div>
 
             <div class="line-break"></div>
@@ -102,34 +70,6 @@ review for the assigned projects in Agile environments.</li>
                 <p>October 2021 - March 2022 </p>
                 <p>Worked as extern for HMI projects at Preh Brasov - 2 projects - Daimler (Daimle_6425_HMI_SENSOR_LIN) and General Motors
                     (GM_6346_HMI_DC_8in_Command).</p>
-                <ul>
-                    <li> Setup the Development Environment - BSG, Debugger Workspace,
-                        DDcom, Tessy, Polyspace - Bug finder and Code Prover, Bininspector,
-                        etc.</li> 
-                    <li>Update and describe the tool usage in the Description of Development
-                        Environment document.</li> 
-                    <li>Create and maintain the jobs for the Jenkins Server -  fast, nightly and
-                        weekly jobs with particular commands.</li> 
-                    <li>Create/Update Software Integration Test Specification (+ Review together
-                        with the SW PM and SW Architect).</li> 
-                    <li>Implement Scripts for the automated testing.</li> 
-                    <li>Create/Update Software Integration Test Strategy.</li> 
-                    <li>Create commands for the generation of different reports -
-                        DEV_SW_Testprotocol, SW_Documents_Protocol, SCM_report, etc.</li> 
-                    <li>Software deliveries to our testing teams and to our customer.</li> 
-                    <li>Release preparations (different integrations from mainline to branches
-                        using Surround Tool).</li> 
-                    <li>Update and maintain the Release_Notes and the Release_Overview.
-                    <li>Update the linker file according to the specifications received from the SW
-                        Architect.</li> 
-                    <li>Participate to the review of the SW Architecture and create the relevant
-                        smoke tests (for the SW Architecture entries that are constraints for the
-                        SwIntTS).</li> 
-                    <li>Update the analysis of different topics - using Test Track Tool.</li> 
-                    <li>Daily interaction/discussions with the SW Developers, SW Architect and
-                        SW PM of the projects.</li> 
-                        
-                </ul>
             </div>
 
             <div class="line-break"></div>
@@ -139,55 +79,6 @@ review for the assigned projects in Agile environments.</li>
                     and Changer Error Manager | Continental Automotive Systems </strong>
                 <p>Jun 2014 - October 2021 </p>
                 <p>Designed, developed, integrated and tested software for seats and doors.</p>
-                <ul>
-                    <li>Developer for Belt Hand Over - responsible for bug fixing and
-                        implementation of the new requirements (new DTC to inform the user
-                        about a malfunction of the belt hand over switch, new speed in case of
-                        some retraction/extension triggers).</li> 
-                    <li>Software deliveries to our testing teams and to our customer - Daimler (at
-                        least one sprint per week).</li> 
-                    <li>Integration of specific modules / features (Issues / Realization Orders,
-                        Change Packages) from mainline to dev path for 3 different variants of SW
-                        - MAX, MID2-3, MID1.</li> 
-                    <li>Release preparations (configuration of the release script - update of the
-                        SW version, update of the data set version, etc.).</li> 
-                    <li>Execution of the smoke tests.</li> 
-                    <li>Cleaning of the release items - retarget the tasks that are not started
-                        /finished to the next sprint, create a list with all the integrated issues for
-                        our testing team, preparation of the vFlash packages, discussions with our
-                        testing team about the possible problems, etc.</li> 
-                    <li>Daily interaction/discussions with our TPL, our Change Error Manager,
-                        our Scrum Master and our developers from Sibiu, Singapore and Germany
-                        (Ingolstadt).</li> 
-                    <li>CANoe maintenance.</li> 
-                    <li>Execution and Maintenance for our Automatic tests (daily reports).</li> 
-                    <li>Development for adjustment modules - creation of a new module in Sibiu:
-                    Belt Hand Over module (belt bringer) and also many Diagnostics
-                    implementations including the following activities: requirements review,
-                    requirements clarifications, requirements implementation in IDEAS, bug
-                    fixes, analysis for different car traces and customer/testing issues, SW
-                    <li>Detailed Design creation using Atom Tool, Unit Tests
-                    creation/execution/automation, Software Tests with SWATT HIL, etc.
-                    Unit tests creation for different modules (SWATT tests) - CAN, Manual
-                    Adjustment, Diagnostic.</li> 
-                    <li>Smoke tests maintenance and automation - general smoke executed for
-                    every release.</li> 
-                    <li>Support and Trainer for new colleagues - SWATT, IMS, IDEAS, CANoe,
-                    Code Collaborator.</li> 
-                    <li>Integrator for an old Daimler project (MFA2) - 2/3 releases per year and
-                    support for the integrator of MRA2 project.</li> 
-                    <li>Analysis for different customer(car) traces.</li> 
-                    <li>Jenkins owner - maintenance of different scripts and jobs (QTools reports,
-                    automatic release, SWATT report, DEV Gate - continuous integration,
-                    nightly builds, etc.).</li> 
-                    Maintain SW Integration documentation.</li> 
-                    Diagnostics implementations: mainly DTCs and DIDs.
-                    <li>Run Time Environment (RTE) - interfaces creation using Rhapsody and
-                    generation of the code using RTools.</li> 
-                    Testing BCMs - Body Control Modules for Porsche and Audi projects) -
-                    assigned modules: trunk lights and Controller Area Network (CAN).</li> 
-
-                </ul>
             </div>
 
             <div class="line-break"></div>
@@ -220,7 +111,9 @@ review for the assigned projects in Agile environments.</li>
                 <li>JMETER on Live Apps - Performance Testing (Udemy, June 2025, 
                     <a href="https://www.udemy.com/certificate/UC-db735a8a-27e4-4594-b94b-ddcd053c1949/" target="_blank">https://www.udemy.com/certificate/UC-db735a8a-27e4-4594-b94b-ddcd053c1949/</a>)</li>
                 <li>Python/PostgreSQL (Udemy, August 2025, 
-                     <a href="https://www.udemy.com/certificate/UC-1ce71a0f-d5e9-499e-b4e9-d4c1aed4ab08/" target="_blank">https://www.udemy.com/certificate/UC-1ce71a0f-d5e9-499e-b4e9-d4c1aed4ab08/</a>)</li>                 
+                     <a href="https://www.udemy.com/certificate/UC-1ce71a0f-d5e9-499e-b4e9-d4c1aed4ab08/" target="_blank">https://www.udemy.com/certificate/UC-1ce71a0f-d5e9-499e-b4e9-d4c1aed4ab08/</a>)</li>   
+                <li>Development Programming Languages PySide Qt For Python (PySide6) GUI For Beginners : The Fundamentals (Udemy, October 2025,
+                        <a href="https://www.udemy.com/certificate/UC-bc331549-2dd7-4d82-89ba-f679a0ddb2a0/" target="_blank">https://www.udemy.com/certificate/UC-bc331549-2dd7-4d82-89ba-f679a0ddb2a0/</a>)</li>                     
             </ul>
         </section>
 
